Remove test parameter changes